[tool.poetry]
name = "mikanikos"
version = "0.1.0"
description = "Tutoring Schedule Manager written in Python-Flask/VueJS"
authors = ["Ivan Gonzalez Ibarra <ivan.gonzalez@liveviewtech.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-cors = "^3.0.10"
invoke = "^1.5.0"
flask_httpauth = "^4.2.0"
flask_sqlalchemy = "^2.4.4"
pyjwt = "^2.0.1"
pillow = "^8.1.0"
ujson = "^4.0.2"
simplejson = "^3.17.2"
Werkzeug = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.11.1"
pytest-xdist = "^2.2.0"
pytest = "^6.2.1"
pytest-asyncio = "^0.14.0"
yapf = "^0.30.0"
invoke = "^1.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
